# codewise

./: .gitignore  .pre-commit-config.yaml  CACHE_CHANGE_DETECTION.md  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  DATASET_GUIDE.md  DEMO_SCRIPT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MACOS_TEST_CRASH.md  OUTPUT_STORAGE_IMPLEMENTATION.md  PIPELINE.md  PROGRESS_CHECKLIST.md  PROJECT_GUIDELINES.md  QUICKSTART.md  QUICKSTART_STRUCTURED_RESPONSES.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SAMPLE_PROJECTS.md  START_HERE.md  STEP_2.1_GUIDE.md  STRUCTURED_RESPONSES_IMPLEMENTATION.md  STRUCTURED_RESPONSE_FORMAT.md  TESTING_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  TEST_REFACTORING_GUIDE.md  code_evaluator.py  config.yaml  demo_gui.py  evaluation_rubric.md  pyproject.toml  requirements.txt  run_tests.sh  setup.sh  test_mode_selection.py
.github/workflows/: ci.yml
code_wise/: code_evaluator.py
code_wise/codewise_gui/: codewise_ui_utils.py
code_wise/llm/: code_eval_prompt.py  llm_integration.py  llm_local.py
code_wise/logic/: analyze_cognitive_complexity.py  code_ast_parser.py
code_wise/pipeline/: __init__.py  batch_processor.py  cache_manager.py  model_api.py  pipeline_logger.py  (+1 more)
paper/: khorashadi_masters_paper.tex  md_to_html.py  reference_summaries.html  reference_summaries.md  references.bib
prompts/: critique_template.txt  improve_template.txt  naming_critique_template.txt  recritique_template.txt
scripts/: add_initial_samples.py  add_samples_interactive.py  curate_dataset.py  preprocess_samples.py
tests/: test_debug.py  test_parse.py
(+42 files in other folders)
