[project]
name = "code-wise"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "openai ==1.72.0",
    "python-dotenv ==1.0.1",
    "requests ==2.32.3",
    "pyside6 ==6.9.0"
]

[tool.uv]
dev-dependencies = [
    "iniconfig ==2.0.0",
    "packaging ==24.2",
    "pluggy ==1.5.0",
    "pytest ==8.3.4",
    "pytest-cov ==6.0.0",
    "ruff"
]

[tool.setuptools]
packages = ["code_wise"]